@@ -21,4 +21,16 @@ my $config = Config::Abstraction->new(
 diag(Data::Dumper->new([$config])->Dump()) if($ENV{'TEST_VERBOSE'});
 cmp_ok($config->get('foo'), 'eq', 'xyzzy plugh', 'Handles RT#59922');
 
+# https://stackoverflow.com/questions/14873227/escaping-colons-in-yaml
+write_file(File::Spec->catdir($test_dir, 'base.yaml'), <<'FIN');
+---
+"mysite:8000": MyApiKey
+FIN
+
+$config = Config::Abstraction->new(
+	config_dirs => [$test_dir],
+);
+diag(Data::Dumper->new([$config])->Dump()) if($ENV{'TEST_VERBOSE'});
+cmp_ok($config->get('mysite:8000'), 'eq', 'MyApiKey', 'https://stackoverflow.com/questions/14873227/escaping-colons-in-yaml');
+
 done_testing();
